Migrate logback to Java 8 + SLF4J 1.7.36 compatibility
- Downgrade Java compilation target from 11 to 1.8
- Replace SLF4J 2.x ServiceProvider with 1.x StaticLoggerBinder binding
- Replace Jakarta EE (jakarta.servlet, jakarta.mail) with javax namespace
- Remove JPMS module-info.java and Multi-Release JAR support
- Remove SLF4J 2.x Fluent API and KeyValuePair usage
- Downgrade Jetty 12 to 9.4.x and GreenMail 2.x to 1.6.x for Java 8
- Fix MatchHelloEvaluator.start() recursive call bug (pre-existing)
- Version: 1.5.33-slf4j1x-jre8, branch: master-jre8

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>